[package]

name = "yup-oauth2"
version = "8.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Lewin Bormann <lbo@spheniscida.de>"]
repository = "https://github.com/dermesser/yup-oauth2"
description = "An oauth2 implementation, providing the 'device', 'service account' and 'installed' authorization flows"
documentation = "https://docs.rs/yup-oauth2/"
keywords = ["google", "oauth", "v2"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[example]]
name = "custom_flow"
required-features = ["hyper-rustls"]

[[example]]
name = "custom_client"
required-features = ["hyper-rustls", "service_account"]

[[example]]
name = "custom_storage"
required-features = ["hyper-rustls"]

[[test]]
name = "tests"
required-features = ["hyper-rustls", "service_account"]

[features]
default = ["hyper-rustls", "service_account"]
service_account = ["hyper-rustls", "rustls", "rustls-pemfile"]

[dependencies]
anyhow = "1.0.38"
async-trait = "^0.1"
base64 = "0.13.0"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "server", "tcp", "http2"] }
hyper-rustls = { version = "0.24", optional = true, features = ["http2"] }
hyper-tls = { version = "0.5.0", optional = true }
itertools = "0.10.0"
log = "0.4"
percent-encoding = "2"
rustls = { version = "0.21.0", optional = true }
rustls-pemfile = { version = "1.0.1", optional = true }
seahash = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = { version = "0.3.7", features = ["local-offset", "parsing", "serde"] }
tokio = { version = "1.0", features = ["fs", "macros", "io-std", "io-util", "time", "sync", "rt"] }
tower-service = "^0.3.1"
url = "2"

[dev-dependencies]
httptest = "0.15"
env_logger = "0.10"
tempfile = "3.1"
webbrowser = "0.8"
hyper-rustls = "0.24"

[workspace]
members = ["examples/test-installed/", "examples/test-svc-acct/", "examples/test-device/", "examples/test-adc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "yup_oauth2_docsrs"]
