[package]

name = "yup-oauth2"
version = "12.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Lewin Bormann <lbo@spheniscida.de>"]
repository = "https://github.com/dermesser/yup-oauth2"
description = "An oauth2 implementation, providing the 'device', 'service account' and 'installed' authorization flows"
documentation = "https://docs.rs/yup-oauth2/"
keywords = ["google", "oauth", "oauth2"]
license = "MIT OR Apache-2.0"
edition = "2021"

[[example]]
name = "custom_flow"
required-features = ["hyper-rustls", "ring"]

[[example]]
name = "custom_client"
required-features = ["hyper-rustls", "service-account", "ring"]

[[example]]
name = "custom_storage"
required-features = ["hyper-rustls", "ring"]

[[test]]
name = "tests"
required-features = ["hyper-rustls", "service-account"]

[features]
default = ["hyper-rustls", "service-account", "ring"]
service_account = ["service-account"]
service-account = ["rustls-pemfile"]
hyper-rustls = ["dep:hyper-rustls", "__rustls"]
ring = ["rustls/ring", "hyper-rustls?/ring"]
aws-lc-rs = ["rustls/aws_lc_rs", "hyper-rustls?/aws-lc-rs"]
hyper-tls = ["dep:hyper-tls", "__rustls"]
# hidden features
__rustls = ["dep:rustls"]

[dependencies]
async-trait = "^0.1"
base64 = "0.22"
futures = "0.3"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1.5", features = ["client-legacy", "server-auto", "http1", "http2", "server-graceful"] }
hyper-rustls = { version = "0.27", optional = true, default-features = false, features = ["http1", "http2", "rustls-native-certs", "native-tokio"] }
hyper-tls = { version = "0.6.0", optional = true }
log = "0.4"
percent-encoding = "2"
rustls = { version = "^0.23", optional = true, default-features = false, features = ["std"] }
rustls-pemfile = { version = "2.0.0", optional = true }
seahash = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3.7", features = ["local-offset", "parsing", "serde"] }
tokio = { version = "1.0", features = [ "fs", "macros", "io-std", "io-util", "time", "sync", "rt"] }
url = "2"

[dev-dependencies]
httptest = "0.16"
env_logger = "0.10"
tempfile = "3.1"
webbrowser = "0.8"
hyper-rustls = "0.27"

[workspace]
members = ["examples/test-installed/", "examples/test-svc-acct/", "examples/test-device/", "examples/test-adc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
