[package]
name = "service_account"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]

[dependencies]
base64 = "0.2"
# We can't just use the local version (../../), as google-pubsub1 will have a different
# version of yup-oauth2, leading to type errors. For testing changes locally, download
# github.com/Byron/google-apis-rs, and use the local yup-oauth2 crate in the google-pubsub1
# crate as well as here.
yup-oauth2 = "^ 1.0"
google-pubsub1 = "^ 1.0"
hyper = "0.10"
hyper-rustls = "^ 0.3"
